# Hash-Checksum-Calculator

./: CMakeLists.txt  README.md
headers/: Alder32_CC.h  CRC32_CC.h  ChecksumCalculator.h  Comperator.h  Default_RW.h  Directory.h  File.h  FileSystemBuilder.h  HashStreamWriter.h  MD5_CC.h  Observable.h  Observer.h  PauseController.h  PrintVisitor.h  ProcessingVisitor.h  ProgressReporter.h  ReportWriter.h  Saver.h  SimpleFileSystemBuilder.h  SmartFileSystemBuilder.h  SystemItem.h  Visitor.h  XML_RW.h
src/: Alder32_CC.cpp  CRC32_CC.cpp  ChecksumCalculator.cpp  Comperator.cpp  Default_RW.cpp  Directory.cpp  File.cpp  FileSystemBuilder.cpp  HashStreamWriter.cpp  MD5_CC.cpp  Observable.cpp  PauseController.cpp  PrintVisitor.cpp  ProcessingVisitor.cpp  ProgressReporter.cpp  ReportWriter.cpp  Saver.cpp  SimpleFileSystemBuilder.cpp  SmartFileSystemBuilder.cpp  SystemItem.cpp  Visitor.cpp  XML_RW.cpp  main.cpp
test/: Alder32_CCTest.cpp  CRC32_CCTest.cpp  ChecksumCalculatorTest.cpp  ComperatorTest.cpp  HashStreamWriterTest.cpp  MD5_CCTest.cpp  PrintVisitorTest.cpp  ProgressReporterTest.cpp  ReportWriterTest.cpp  SaverTest.cpp  SimpleFileSystemBuilderTest.cpp  SmartFileSystemBuilderTest.cpp  XML_RWTest.cpp
test/testResources/: savedChecksum.txt  savedChecksum2.txt  savedChecksum3.txt  savedChecksumm.txt
test/testResources/testFiles/: test2.txt
test/testResources/testFiles/wordFIles/: New Microsoft Word Document.docx
